# RAGPT-1

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
notebook/: demo.ipynb
src/: assistant_identity.py  baidu_search.py  config.py  ingest.py  llm.py  loader.py  rag.py  retrieve.py  users.py  utils.py
